# Sandbox-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  gitignore  notes.md
include/automata/: Solver.h
include/core/: Entity.h  FrameBuffer.h
include/renderer/: AutomataFrameRenderer.h  IndexBuffer.h  OrthoCamera.h  Primitives.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
include/utils/: ThreadPool.h
include/window/: Window.h
lib/: glfw3.lib
res/shaders/: automata.shader  basic.shader
src/: entities.cpp  main.cpp
src/automata/: Solver.cpp
src/core/: Entity.cpp  FrameBuffer.cpp
src/renderer/: IndexBuffer.cpp  OrthoCamera.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
src/utils/: ThreadPool.cpp
test/: CMakeCache.txt  Makefile  cmake_install.cmake
